--- a/.tekton/test-pr.yaml
+++ b/.tekton/test-pr.yaml
@@ -56,6 +56,8 @@ spec:
       # Customize this task if you like, or just do a taskRef
       # to one of the hub task.
       - name: link-markdown
+        taskRef:
+          name: markdown-lint
         runAfter:
           - fetch-repository
         workspaces:
