--- a/.tekton/build.yaml
+++ b/.tekton/build.yaml
@@ -3,172 +3,73 @@ kind: PipelineRun
 metadata:
   name: spring-petclinic-build
   annotations:
+    # The event we are targeting as seen from the webhook payload
+    # this can be an array too, i.e: [pull_request, push]
     pipelinesascode.tekton.dev/on-event: "[pull_request, push]"
+
+    # The branch or tag we are targeting (ie: main, refs/tags/*)
     pipelinesascode.tekton.dev/on-target-branch: "cicd-demo"
-    pipelinesascode.tekton.dev/task: "[git-clone:0.8, .tekton/tasks/create-promote-pr-task.yaml, .tekton/tasks/s2i-java-11-task.yaml, .tekton/tasks/mvn-task.yaml, .tekton/tasks/git-update-deployment-task.yaml]"    
+    
+    # Fetch the git-clone task from hub, we are able to reference later on it
+    # with taskRef and it will automatically be embedded into our pipeline.
+    pipelinesascode.tekton.dev/task: "[git-clone:0.8]"
+    pipelinesascode.tekton.dev/task-1: "https://raw.githubusercontent.com/tektoncd/catalog/main/task/maven/0.2/maven.yaml"
+
+    
+    # You can add more tasks in here to reuse, browse the one you like from here
+    # https://hub.tekton.dev/
+    # example:
+    # pipelinesascode.tekton.dev/task-2: "[maven, buildah]"
+
+    # How many runs we want to keep attached to this event
     pipelinesascode.tekton.dev/max-keep-runs: "5"
 spec:
   params:
+    # The variable with brackets are special to Pipelines as Code
+    # They will automatically be expanded with the events from Github.
     - name: repo_url
       value: "{{ repo_url }}"
     - name: revision
       value: "{{ revision }}"
   pipelineSpec:
-    results:
-      - name: APP_IMAGE_DIGETST
-        description: The image digest built in the pipeline
-        value: $(tasks.build-image.results.IMAGE_DIGEST)
-      - name: APP_IMAGE_URL
-        description: The image url built in the pipeline
-        value: $(tasks.build-image.results.IMAGE_NAME)
-    tasks:
-    - name: source-clone
-      taskRef:
-        name: git-clone
-      workspaces:
-      - name: output
-        workspace: workspace
-      params:
-      - name: url
-        value: $(params.repo_url)
+    params:
+      - name: repo_url
       - name: revision
-        value: $(params.revision)
-      - name: depth
-        value: "0"
-      - name: subdirectory
-        value: spring-petclinic
-      - name: deleteExisting
-        value: "true"
-    - name: unit-tests
-      taskRef:
-        name: maven
-      runAfter:
-        - source-clone
-      workspaces:
+    workspaces:
       - name: source
-        workspace: workspace
-      - name: maven-settings
-        workspace: maven-settings
-      params:
-      - name: GOALS
-        value: ["package", "-f", "spring-petclinic"]
-    - name: code-analysis
-      taskRef:
-        name: maven
-      runAfter:
-        - unit-tests
-      workspaces:
-      - name: source
-        workspace: workspace
-      - name: maven-settings
-        workspace: maven-settings
-      params:
-      - name: GOALS
-        value:
-        - install
-        - sonar:sonar
-        - -f
-        - spring-petclinic
-        - -Dsonar.host.url=http://sonarqube:9000
-        - -Dsonar.userHome=/tmp/sonar
-        - -DskipTests=true
-    - name: security-scan
-      taskRef:
-        name: maven
-      runAfter:
-        - unit-tests
-      workspaces:
-      - name: source
-        workspace: workspace
-      - name: maven-settings
-        workspace: maven-settings
-      params:
-      - name: GOALS
-        value: ["--version", "-f", "spring-petclinic"]
-    - name: release-app
-      taskRef:
-        name: maven
-      runAfter:
-        - code-analysis
-        - security-scan
-      workspaces:
-      - name: source
-        workspace: workspace
-      - name: maven-settings
-        workspace: maven-settings
-      params:
-      - name: GOALS
-        value:
-        - deploy
-        - -f 
-        - spring-petclinic
-        - -DskipTests=true
-        - -DaltDeploymentRepository=nexus::default::http://nexus:8081/repository/maven-releases/
-        - -DaltSnapshotDeploymentRepository=nexus::default::http://nexus:8081/repository/maven-snapshots/
-    - name: build-image
-      taskRef:
-        name: s2i-java-11
-      runAfter:
-      - release-app
-      params:
-        - name: TLSVERIFY
-          value: "false"
-        - name: MAVEN_MIRROR_URL
-          value: http://nexus:8081/repository/maven-public/
-        - name: PATH_CONTEXT
-          value: spring-petclinic/target
-        - name: IMAGE_NAME
-          value: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/spring-petclinic
-        - name: IMAGE_TAG
-          value: latest
-      workspaces:
-      - name: source
-        workspace: workspace
-    - name: update-deployment
-      runAfter:
-      - build-image
-      taskRef:
-        name: git-update-deployment
-      params:
-        - name: GIT_REPOSITORY
-          value: https://github.com/siamaksade/spring-petclinic-config
-        - name: GIT_USERNAME
-          value: gitea
-        - name: GIT_PASSWORD
-          value: openshift
-        - name: CURRENT_IMAGE
-          value: quay.io/siamaksade/spring-petclinic:latest
-        - name: NEW_IMAGE
-          value: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/spring-petclinic
-        - name: NEW_DIGEST
-          value: "$(tasks.build-image.results.IMAGE_DIGEST)"
-        - name: KUSTOMIZATION_PATH
-          value: environments/dev
-      workspaces:
-      - name: workspace
-        workspace: workspace
-    - name: create-promote-pr
-      runAfter:
-      - update-deployment
-      taskRef:
-        name: create-promote-pull-request
-      params:
-        - name: GIT_REPOSITORY
-          value: https://github.com/siamaksade/spring-petclinic-config
-        - name: GIT_USERNAME
-          value: gitea
-        - name: GIT_PASSWORD
-          value: openshift
-        - name: COPY_FROM_PATH
-          value: environments/dev
-        - name: COPY_TO_PATH
-          value: environments/stage
-      workspaces:
-      - name: workspace
-        workspace: workspace
+      - name: basic-auth
+    tasks:
+      - name: fetch-repository
+        taskRef:
+          name: git-clone
+        workspaces:
+          - name: output
+            workspace: source
+          - name: basic-auth
+            workspace: basic-auth
+        params:
+          - name: url
+            value: $(params.repo_url)
+          - name: revision
+            value: $(params.revision)
+      - name: build
+        runAfter:
+          - fetch-repository
+        workspaces:
+          - name: maven-settings
+            workspace: source
+          - name: source
+            workspace: source
+        taskRef:
+          name: maven
+        params:
+          - name: GOALS
+            value:
+              - clean
+              - package
+
   workspaces:
-  - name: maven-settings
-  - name: workspace
+  - name: source
     volumeClaimTemplate:
       spec:
         accessModes:
@@ -176,6 +77,8 @@ spec:
         resources:
           requests:
             storage: 1Gi
+  # This workspace will inject secret to help the git-clone task to be able to
+  # checkout the private repositories
   - name: basic-auth
     secret:
       secretName: "{{ git_auth_secret }}"
