--- a/.tekton/build.yaml
+++ b/.tekton/build.yaml
@@ -13,7 +13,8 @@ metadata:
     # Fetch the git-clone task from hub, we are able to reference later on it
     # with taskRef and it will automatically be embedded into our pipeline.
     pipelinesascode.tekton.dev/task: "[git-clone:0.8]"
-    pipelinesascode.tekton.dev/task-1: "https://raw.githubusercontent.com/tektoncd/catalog/main/task/maven/0.2/maven.yaml"
+    pipelinesascode.tekton.dev/task-1: "[./tekton/tasks/s2i.yaml, .tekton/tasks/git-update-deployment.yaml, .tekton/tasks/create-promote-pr.yaml]"
+    pipelinesascode.tekton.dev/task-2: "https://raw.githubusercontent.com/tektoncd/catalog/main/task/maven/0.2/maven.yaml"
 
     
     # You can add more tasks in here to reuse, browse the one you like from here
@@ -38,8 +39,15 @@ spec:
     workspaces:
       - name: source
       - name: basic-auth
+    results:
+      - name: APP_IMAGE_DIGETST
+        description: The image digest built in the pipeline
+        value: $(tasks.build-image.results.IMAGE_DIGEST)
+      - name: APP_IMAGE_URL
+        description: The image url built in the pipeline
+        value: $(tasks.build-image.results.IMAGE_NAME)
     tasks:
-      - name: fetch-repository
+      - name: source-clone
         taskRef:
           name: git-clone
         workspaces:
@@ -52,22 +60,134 @@ spec:
             value: $(params.repo_url)
           - name: revision
             value: $(params.revision)
-      - name: build
-        runAfter:
-          - fetch-repository
-        workspaces:
-          - name: maven-settings
-            workspace: source
-          - name: source
-            workspace: source
+          - name: depth
+            value: "0"
+          - name: subdirectory
+            value: spring-petclinic
+      - name: unit-tests
         taskRef:
           name: maven
+        runAfter:
+          - source-clone
+        workspaces:
+        - name: source
+          workspace: source
+        - name: maven-settings
+          workspace: source
         params:
-          - name: GOALS
-            value:
-              - clean
-              - package
-
+        - name: GOALS
+          value: ["package", "-f", "spring-petclinic"]
+      - name: code-analysis
+        taskRef:
+          name: maven
+        runAfter:
+          - unit-tests
+        workspaces:
+        - name: source
+          workspace: source
+        - name: maven-settings
+          workspace: source
+        params:
+        - name: GOALS
+          value:
+          - install
+          - sonar:sonar
+          - -f
+          - spring-petclinic
+          - -Dsonar.host.url=http://sonarqube:9000
+          - -Dsonar.userHome=/tmp/sonar
+          - -DskipTests=true
+      - name: security-scan
+        taskRef:
+          name: maven
+        runAfter:
+          - unit-tests
+        workspaces:
+        - name: source
+          workspace: source
+        - name: maven-settings
+          workspace: source
+        params:
+        - name: GOALS
+          value: ["--version", "-f", "spring-petclinic"]
+      - name: release-app
+        taskRef:
+          name: maven
+        runAfter:
+          - code-analysis
+          - security-scan
+        workspaces:
+        - name: source
+          workspace: source
+        - name: maven-settings
+          workspace: source
+        params:
+        - name: GOALS
+          value:
+          - deploy
+          - -f 
+          - spring-petclinic
+          - -DskipTests=true
+          - -DaltDeploymentRepository=nexus::default::http://nexus:8081/repository/maven-releases/
+          - -DaltSnapshotDeploymentRepository=nexus::default::http://nexus:8081/repository/maven-snapshots/
+      - name: build-image
+        taskRef:
+          name: s2i-java-11
+        runAfter:
+        - release-app
+        params:
+          - name: TLSVERIFY
+            value: "false"
+          - name: MAVEN_MIRROR_URL
+            value: http://nexus:8081/repository/maven-public/
+          - name: PATH_CONTEXT
+            value: spring-petclinic/target
+          - name: IMAGE_NAME
+            value: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/spring-petclinic
+          - name: IMAGE_TAG
+            value: $(params.APP_IMAGE_TAG)
+        workspaces:
+        - name: source
+          workspace: source
+      - name: update-deployment
+        runAfter:
+        - build-image
+        taskRef:
+          name: git-update-deployment
+        params:
+          - name: GIT_REPOSITORY
+            value: "$(params.APP_MANIFESTS_GIT)"
+          - name: GIT_USERNAME
+            value: gitea
+          - name: GIT_PASSWORD
+            value: openshift
+          - name: CURRENT_IMAGE
+            value: quay.io/siamaksade/spring-petclinic:latest
+          - name: NEW_IMAGE
+            value: image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/spring-petclinic
+          - name: NEW_DIGEST
+            value: "$(tasks.build-image.results.IMAGE_DIGEST)"
+          - name: KUSTOMIZATION_PATH
+            value: environments/dev
+        workspaces:
+        - name: workspace
+          workspace: source
+      - name: create-promote-pr
+        runAfter:
+        - update-deployment
+        taskRef:
+          name: create-promote-pull-request
+        params:
+          - name: GIT_REPOSITORY
+            value: "$(params.APP_MANIFESTS_GIT)"
+          - name: GIT_USERNAME
+            value: gitea
+          - name: GIT_PASSWORD
+            value: openshift
+          - name: COPY_FROM_PATH
+            value: environments/dev
+          - name: COPY_TO_PATH
+            value: environments/stage
   workspaces:
   - name: source
     volumeClaimTemplate:
