added task for creating maven settings.xml

--- a/.tekton/build.yaml
+++ b/.tekton/build.yaml
@@ -8,7 +8,6 @@ metadata:
     pipelinesascode.tekton.dev/task: "[git-clone:0.8]"
     pipelinesascode.tekton.dev/task-1: "https://raw.githubusercontent.com/tektoncd/catalog/main/task/maven/0.2/maven.yaml"
     pipelinesascode.tekton.dev/max-keep-runs: "5"
-    
 spec:
   params:
     - name: repo_url
@@ -47,19 +46,25 @@ spec:
             value: "0"
           - name: subdirectory
             value: spring-petclinic
+      - name: mvn-config
+        taskRef: 
+          name: mvn-config
+        runAfter:
+          - source-clone
+        workspaces:
+        - name: workspace
+          workspace: source
       - name: unit-tests
         taskRef:
           name: maven
         runAfter:
-          - source-clone
+          - configure-maven
         workspaces:
         - name: source
           workspace: source
         - name: maven-settings
           workspace: source
         params:
-        - name: MAVEN_MIRROR_URL
-          value: http://nexus:8081/repository/maven-releases/
         - name: GOALS
           value: ["package", "-f", "spring-petclinic"]
       - name: code-analysis
@@ -73,8 +78,6 @@ spec:
         - name: maven-settings
           workspace: source
         params:
-        - name: MAVEN_MIRROR_URL
-          value: http://nexus:8081/repository/maven-releases/
         - name: GOALS
           value:
           - install
@@ -95,8 +98,6 @@ spec:
         - name: maven-settings
           workspace: source
         params:
-        - name: MAVEN_MIRROR_URL
-          value: http://nexus:8081/repository/maven-releases/
         - name: GOALS
           value: ["--version", "-f", "spring-petclinic"]
       - name: release-app
@@ -111,12 +112,6 @@ spec:
         - name: maven-settings
           workspace: source
         params:
-        - name: SERVER_USER
-          value: admin
-        - name: SERVER_PASSWORD
-          value: admin123
-        - name: MAVEN_MIRROR_URL
-          value: http://nexus:8081/repository/maven-releases/
         - name: GOALS
           value:
           - deploy
@@ -192,8 +187,6 @@ spec:
         resources:
           requests:
             storage: 1Gi
-  # This workspace will inject secret to help the git-clone task to be able to
-  # checkout the private repositories
   - name: basic-auth
     secret:
       secretName: "{{ git_auth_secret }}"
