Fixed mvn-config task name in runafter

--- a/.tekton/build.yaml
+++ b/.tekton/build.yaml
@@ -55,7 +55,7 @@ spec:
         taskRef:
           name: maven
         runAfter:
-          - configure-maven
+          - mvn-config
         workspaces:
         - name: source
           workspace: source
