--- a/pom.xml
+++ b/pom.xml
@@ -202,8 +202,7 @@
         </executions>
       </plugin>
 
-      <!-- Spring Boot Actuator displays build-related information if a git.properties
-        file is present at the classpath -->
+      <!-- Spring Boot Actuator displays build-related information if a git.properties file is present at the classpath -->
       <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
@@ -218,13 +217,22 @@
           <verbose>true</verbose>
           <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
           <generateGitPropertiesFile>true</generateGitPropertiesFile>
-          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
-          </generateGitPropertiesFilename>
+          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
           <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
+          <injectAllReactorProjects>true</injectAllReactorProjects>
         </configuration>
       </plugin>
-
+      <plugin>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.2</version>
+          <executions>
+              <execution>
+                  <id>default-deploy</id>
+                  <phase>none</phase>
+              </execution>
+          </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -274,6 +282,33 @@
   </pluginRepositories>
 
   <profiles>
+    <profile>
+      <id>deploy</id>
+      <build>
+        <plugins>
+          <plugin>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8.2</version>
+              <executions>
+                  <execution>
+                      <id>deploy-artifact</id>
+                      <phase>deploy</phase>
+                      <goals>
+                          <goal>deploy-file</goal>
+                      </goals>
+                  </execution>
+              </executions>
+              <configuration>
+                  <file>${project.basedir}/target/${project.artifactId}-${project.version}.${project.packaging}</file>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>${project.artifactId}</artifactId>
+                  <version>${project.version}-${git.commit.id.abbrev}</version>
+                  <packaging>${project.packaging}</packaging>
+              </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>css</id>
       <build>
